# morfMonitor

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  service.json
config/: morfmonitor.example.json  morfmonitor.json  morfsystem.example.json  morfsystem.json
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/morfmonitor/: Collectors.h  HttpServer.h  IModule.h  ModuleFactory.h  ModuleRegistry.h  MonitorModule.h  Service.h  ServiceConfig.h  SharedConfig.h  Version.h
resources/: web.qrc
scripts/: new-service.ps1  new-service.sh  sync-morf.ps1  sync-morf.sh
scripts/linux/: check-config.py  config-tool.sh  deploy-config.sh  install-service.sh  morfmonitor.service  update-service.sh
scripts/windows/: config-tool.ps1  deploy-config.ps1  install-service.ps1  update-service.ps1
service/: CMakeLists.txt  main.cpp
src/: HostCollectors.cpp  HttpServer.cpp  ModuleFactory.cpp  ModuleRegistry.cpp  MonitorModule.cpp  Service.cpp  SharedConfig.cpp  Supervisor.cpp
web_src/: app.js  index.html  styles.css
